--- a/package.json
+++ b/package.json
@@ -37,13 +37,12 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "dev": "esno watch src",
+    "dev": "vitest -u",
     "lint": "eslint .",
+    "typecheck": "tsc --noEmit",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish",
-    "start": "esno src/index.ts",
-    "test": "vitest",
-    "typecheck": "tsc --noEmit"
+    "test": "npm run lint --fix && vitest"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.29.3",
@@ -51,7 +50,6 @@
     "@types/node": "^18.11.9",
     "bumpp": "^8.2.1",
     "eslint": "^8.26.0",
-    "esno": "^0.16.3",
     "pnpm": "^7.14.2",
     "typescript": "^4.8.4",
     "unbuild": "^0.9.4",
