--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "target": "es2018",
     "module": "esnext",
     "lib": ["esnext"],
@@ -9,6 +10,13 @@
     "strictNullChecks": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true
-  }
+    "skipDefaultLibCheck": true,
+    "paths": {
+      "~/*": ["src/*"]
+    }
+  },
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
