--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,8 @@
 {
+  "extends": "./.nitro/types/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "target": "es2018",
-    "module": "esnext",
-    "lib": ["esnext"],
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["./*"]
     }
-  },
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+  }
 }
